parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOT
    SQBL
    SQBR
    newline

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM COLON V MAIN P B END
Rule 2     MAIN -> empty
Rule 3     V -> V VAR VM COLON TIPO
Rule 4     V -> empty
Rule 5     VM -> ID VM2
Rule 6     VM -> ID SQBL NUMBER SQBR VM2
Rule 7     VM -> ID SQBL NUMBER COMMA NUMBER SQBR VM2
Rule 8     VM -> ID SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2
Rule 9     VM2 -> COMMA ID VM2
Rule 10    VM2 -> COMMA ID SQBL NUMBER SQBR VM2
Rule 11    VM2 -> COMMA ID SQBL NUMBER COMMA NUMBER SQBR VM2
Rule 12    VM2 -> COMMA ID SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2
Rule 13    VM2 -> empty
Rule 14    TIPO -> FLOAT
Rule 15    TIPO -> INT
Rule 16    TIPO -> ARRAY_INT
Rule 17    TIPO -> ARRAY_FLOAT
Rule 18    TIPO -> MATRIX_INT
Rule 19    TIPO -> MATRIX_FLOAT
Rule 20    TIPO -> CUBE_INT
Rule 21    TIPO -> CUBE_FLOAT
Rule 22    TIPO -> BOOL
Rule 23    P -> P AUXPOSP PROCEDURE ID COLON B ENDP
Rule 24    P -> empty
Rule 25    AUXPOSP -> empty
Rule 26    B -> BEGIN COLON ST
Rule 27    ST -> S ST
Rule 28    ST -> empty
Rule 29    S -> FOR ID IN ID COLON ST ENDF
Rule 30    S -> DO COLON ST DWHILE COLON CONDITION ENDDO
Rule 31    S -> GOSUB ID
Rule 32    S -> PRINT PARL SID PARR
Rule 33    SID -> SID PLUS SID_T
Rule 34    SID -> SID_T
Rule 35    SID_T -> STRING
Rule 36    SID_T -> ID
Rule 37    SID -> empty
Rule 38    S -> INPUT PARL ID PARR
Rule 39    S -> INPUT PARL ID SQBL IDNUM SQBR PARR
Rule 40    S -> INPUT PARL ID SQBL IDNUM COMMA IDNUM SQBR PARR
Rule 41    S -> INPUT PARL ID SQBL IDNUM COMMA IDNUM COMMA IDNUM SQBR PARR
Rule 42    IDNUM -> ID
Rule 43    IDNUM -> NUMBER
Rule 44    S -> VAMC ASSIGN UPDATE
Rule 45    UPDATE -> T
Rule 46    UPDATE -> UPDATE PLUS T
Rule 47    UPDATE -> UPDATE MINUS T
Rule 48    UPDATE -> UPDATE OR T
Rule 49    T -> F
Rule 50    T -> T TIMES F
Rule 51    T -> T DIVIDE F
Rule 52    T -> T AND F
Rule 53    F -> ID
Rule 54    F -> ID SQBL IDNUM SQBR
Rule 55    F -> ID SQBL IDNUM COMMA IDNUM SQBR
Rule 56    F -> ID SQBL IDNUM COMMA IDNUM COMMA IDNUM SQBR
Rule 57    F -> NUMBER
Rule 58    F -> PARL CONDITION PARR
Rule 59    VAMC -> ID
Rule 60    VAMC -> ID SQBL IDNUM SQBR
Rule 61    VAMC -> ID SQBL IDNUM COMMA IDNUM SQBR
Rule 62    VAMC -> ID SQBL IDNUM COMMA IDNUM COMMA IDNUM SQBR
Rule 63    S -> IF CONDITION AUXCOLON ST ENDIF
Rule 64    S -> IF CONDITION AUXCOLON ST ELSE COLON AUXQ ST AUXENDIF ENDIF
Rule 65    AUXQ -> empty
Rule 66    AUXENDIF -> empty
Rule 67    S -> WHILE AUXWHILE CONDITION AUXCOLON ST AUXENDWHILE ENDW
Rule 68    AUXWHILE -> empty
Rule 69    AUXENDWHILE -> empty
Rule 70    CONDITION -> UPDATE
Rule 71    CONDITION -> UPDATE NE UPDATE
Rule 72    CONDITION -> UPDATE GT UPDATE
Rule 73    CONDITION -> UPDATE LT UPDATE
Rule 74    CONDITION -> UPDATE EQ UPDATE
Rule 75    AUXCOLON -> COLON
Rule 76    empty -> <empty>

Terminals, with rules where they appear

AND                  : 52
ARRAY_FLOAT          : 17
ARRAY_INT            : 16
ASSIGN               : 44
BEGIN                : 26
BOOL                 : 22
COLON                : 1 3 23 26 29 30 30 64 75
COMMA                : 7 8 8 9 10 11 11 12 12 12 40 41 41 55 56 56 61 62 62
COMMENT              : 
CUBE_FLOAT           : 21
CUBE_INT             : 20
DIVIDE               : 51
DO                   : 30
DOT                  : 
DWHILE               : 30
ELSE                 : 64
END                  : 1
ENDDO                : 30
ENDF                 : 29
ENDIF                : 63 64
ENDP                 : 23
ENDW                 : 67
EQ                   : 74
FLOAT                : 14
FOR                  : 29
GOSUB                : 31
GT                   : 72
ID                   : 5 6 7 8 9 10 11 12 23 29 29 31 36 38 39 40 41 42 53 54 55 56 59 60 61 62
IF                   : 63 64
IN                   : 29
INPUT                : 38 39 40 41
INT                  : 15
LT                   : 73
MATRIX_FLOAT         : 19
MATRIX_INT           : 18
MINUS                : 47
NE                   : 71
NUMBER               : 6 7 7 8 8 8 10 11 11 12 12 12 43 57
OR                   : 48
PARL                 : 32 38 39 40 41 58
PARR                 : 32 38 39 40 41 58
PLUS                 : 33 46
PRINT                : 32
PROCEDURE            : 23
PROGRAM              : 1
SQBL                 : 6 7 8 10 11 12 39 40 41 54 55 56 60 61 62
SQBR                 : 6 7 8 10 11 12 39 40 41 54 55 56 60 61 62
STRING               : 35
TIMES                : 50
VAR                  : 3
WHILE                : 67
error                : 
newline              : 

Nonterminals, with rules where they appear

AUXCOLON             : 63 64 67
AUXENDIF             : 64
AUXENDWHILE          : 67
AUXPOSP              : 23
AUXQ                 : 64
AUXWHILE             : 67
B                    : 1 23
CONDITION            : 30 58 63 64 67
F                    : 49 50 51 52
IDNUM                : 39 40 40 41 41 41 54 55 55 56 56 56 60 61 61 62 62 62
MAIN                 : 1
P                    : 1 23
S                    : 27
SID                  : 32 33
SID_T                : 33 34
ST                   : 26 27 29 30 63 64 64 67
T                    : 45 46 47 48 50 51 52
TIPO                 : 3
UPDATE               : 44 46 47 48 70 71 71 72 72 73 73 74 74
V                    : 1 3
VAMC                 : 44
VM                   : 3
VM2                  : 5 6 7 8 9 10 11 12
empty                : 2 4 13 24 25 28 37 65 66 68 69
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM COLON V MAIN P B END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . COLON V MAIN P B END

    COLON           shift and go to state 3


state 3

    (1) program -> PROGRAM COLON . V MAIN P B END
    (3) V -> . V VAR VM COLON TIPO
    (4) V -> . empty
    (76) empty -> .

    VAR             reduce using rule 76 (empty -> .)
    BEGIN           reduce using rule 76 (empty -> .)
    PROCEDURE       reduce using rule 76 (empty -> .)

    V                              shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) program -> PROGRAM COLON V . MAIN P B END
    (3) V -> V . VAR VM COLON TIPO
    (2) MAIN -> . empty
    (76) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 76 (empty -> .)
    PROCEDURE       reduce using rule 76 (empty -> .)

    MAIN                           shift and go to state 6
    empty                          shift and go to state 8

state 5

    (4) V -> empty .

    VAR             reduce using rule 4 (V -> empty .)
    BEGIN           reduce using rule 4 (V -> empty .)
    PROCEDURE       reduce using rule 4 (V -> empty .)


state 6

    (1) program -> PROGRAM COLON V MAIN . P B END
    (23) P -> . P AUXPOSP PROCEDURE ID COLON B ENDP
    (24) P -> . empty
    (76) empty -> .

    BEGIN           reduce using rule 76 (empty -> .)
    PROCEDURE       reduce using rule 76 (empty -> .)

    P                              shift and go to state 9
    empty                          shift and go to state 10

state 7

    (3) V -> V VAR . VM COLON TIPO
    (5) VM -> . ID VM2
    (6) VM -> . ID SQBL NUMBER SQBR VM2
    (7) VM -> . ID SQBL NUMBER COMMA NUMBER SQBR VM2
    (8) VM -> . ID SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2

    ID              shift and go to state 12

    VM                             shift and go to state 11

state 8

    (2) MAIN -> empty .

    BEGIN           reduce using rule 2 (MAIN -> empty .)
    PROCEDURE       reduce using rule 2 (MAIN -> empty .)


state 9

    (1) program -> PROGRAM COLON V MAIN P . B END
    (23) P -> P . AUXPOSP PROCEDURE ID COLON B ENDP
    (26) B -> . BEGIN COLON ST
    (25) AUXPOSP -> . empty
    (76) empty -> .

    BEGIN           shift and go to state 15
    PROCEDURE       reduce using rule 76 (empty -> .)

    B                              shift and go to state 13
    AUXPOSP                        shift and go to state 14
    empty                          shift and go to state 16

state 10

    (24) P -> empty .

    BEGIN           reduce using rule 24 (P -> empty .)
    PROCEDURE       reduce using rule 24 (P -> empty .)


state 11

    (3) V -> V VAR VM . COLON TIPO

    COLON           shift and go to state 17


state 12

    (5) VM -> ID . VM2
    (6) VM -> ID . SQBL NUMBER SQBR VM2
    (7) VM -> ID . SQBL NUMBER COMMA NUMBER SQBR VM2
    (8) VM -> ID . SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2
    (9) VM2 -> . COMMA ID VM2
    (10) VM2 -> . COMMA ID SQBL NUMBER SQBR VM2
    (11) VM2 -> . COMMA ID SQBL NUMBER COMMA NUMBER SQBR VM2
    (12) VM2 -> . COMMA ID SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2
    (13) VM2 -> . empty
    (76) empty -> .

    SQBL            shift and go to state 19
    COMMA           shift and go to state 20
    COLON           reduce using rule 76 (empty -> .)

    VM2                            shift and go to state 18
    empty                          shift and go to state 21

state 13

    (1) program -> PROGRAM COLON V MAIN P B . END

    END             shift and go to state 22


state 14

    (23) P -> P AUXPOSP . PROCEDURE ID COLON B ENDP

    PROCEDURE       shift and go to state 23


state 15

    (26) B -> BEGIN . COLON ST

    COLON           shift and go to state 24


state 16

    (25) AUXPOSP -> empty .

    PROCEDURE       reduce using rule 25 (AUXPOSP -> empty .)


state 17

    (3) V -> V VAR VM COLON . TIPO
    (14) TIPO -> . FLOAT
    (15) TIPO -> . INT
    (16) TIPO -> . ARRAY_INT
    (17) TIPO -> . ARRAY_FLOAT
    (18) TIPO -> . MATRIX_INT
    (19) TIPO -> . MATRIX_FLOAT
    (20) TIPO -> . CUBE_INT
    (21) TIPO -> . CUBE_FLOAT
    (22) TIPO -> . BOOL

    FLOAT           shift and go to state 26
    INT             shift and go to state 27
    ARRAY_INT       shift and go to state 28
    ARRAY_FLOAT     shift and go to state 29
    MATRIX_INT      shift and go to state 30
    MATRIX_FLOAT    shift and go to state 31
    CUBE_INT        shift and go to state 32
    CUBE_FLOAT      shift and go to state 33
    BOOL            shift and go to state 34

    TIPO                           shift and go to state 25

state 18

    (5) VM -> ID VM2 .

    COLON           reduce using rule 5 (VM -> ID VM2 .)


state 19

    (6) VM -> ID SQBL . NUMBER SQBR VM2
    (7) VM -> ID SQBL . NUMBER COMMA NUMBER SQBR VM2
    (8) VM -> ID SQBL . NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2

    NUMBER          shift and go to state 35


state 20

    (9) VM2 -> COMMA . ID VM2
    (10) VM2 -> COMMA . ID SQBL NUMBER SQBR VM2
    (11) VM2 -> COMMA . ID SQBL NUMBER COMMA NUMBER SQBR VM2
    (12) VM2 -> COMMA . ID SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2

    ID              shift and go to state 36


state 21

    (13) VM2 -> empty .

    COLON           reduce using rule 13 (VM2 -> empty .)


state 22

    (1) program -> PROGRAM COLON V MAIN P B END .

    $end            reduce using rule 1 (program -> PROGRAM COLON V MAIN P B END .)


state 23

    (23) P -> P AUXPOSP PROCEDURE . ID COLON B ENDP

    ID              shift and go to state 37


state 24

    (26) B -> BEGIN COLON . ST
    (27) ST -> . S ST
    (28) ST -> . empty
    (29) S -> . FOR ID IN ID COLON ST ENDF
    (30) S -> . DO COLON ST DWHILE COLON CONDITION ENDDO
    (31) S -> . GOSUB ID
    (32) S -> . PRINT PARL SID PARR
    (38) S -> . INPUT PARL ID PARR
    (39) S -> . INPUT PARL ID SQBL IDNUM SQBR PARR
    (40) S -> . INPUT PARL ID SQBL IDNUM COMMA IDNUM SQBR PARR
    (41) S -> . INPUT PARL ID SQBL IDNUM COMMA IDNUM COMMA IDNUM SQBR PARR
    (44) S -> . VAMC ASSIGN UPDATE
    (63) S -> . IF CONDITION AUXCOLON ST ENDIF
    (64) S -> . IF CONDITION AUXCOLON ST ELSE COLON AUXQ ST AUXENDIF ENDIF
    (67) S -> . WHILE AUXWHILE CONDITION AUXCOLON ST AUXENDWHILE ENDW
    (76) empty -> .
    (59) VAMC -> . ID
    (60) VAMC -> . ID SQBL IDNUM SQBR
    (61) VAMC -> . ID SQBL IDNUM COMMA IDNUM SQBR
    (62) VAMC -> . ID SQBL IDNUM COMMA IDNUM COMMA IDNUM SQBR

    FOR             shift and go to state 41
    DO              shift and go to state 43
    GOSUB           shift and go to state 44
    PRINT           shift and go to state 45
    INPUT           shift and go to state 46
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    END             reduce using rule 76 (empty -> .)
    ENDP            reduce using rule 76 (empty -> .)
    ID              shift and go to state 42

    ST                             shift and go to state 38
    S                              shift and go to state 39
    empty                          shift and go to state 40
    VAMC                           shift and go to state 47

state 25

    (3) V -> V VAR VM COLON TIPO .

    VAR             reduce using rule 3 (V -> V VAR VM COLON TIPO .)
    BEGIN           reduce using rule 3 (V -> V VAR VM COLON TIPO .)
    PROCEDURE       reduce using rule 3 (V -> V VAR VM COLON TIPO .)


state 26

    (14) TIPO -> FLOAT .

    VAR             reduce using rule 14 (TIPO -> FLOAT .)
    BEGIN           reduce using rule 14 (TIPO -> FLOAT .)
    PROCEDURE       reduce using rule 14 (TIPO -> FLOAT .)


state 27

    (15) TIPO -> INT .

    VAR             reduce using rule 15 (TIPO -> INT .)
    BEGIN           reduce using rule 15 (TIPO -> INT .)
    PROCEDURE       reduce using rule 15 (TIPO -> INT .)


state 28

    (16) TIPO -> ARRAY_INT .

    VAR             reduce using rule 16 (TIPO -> ARRAY_INT .)
    BEGIN           reduce using rule 16 (TIPO -> ARRAY_INT .)
    PROCEDURE       reduce using rule 16 (TIPO -> ARRAY_INT .)


state 29

    (17) TIPO -> ARRAY_FLOAT .

    VAR             reduce using rule 17 (TIPO -> ARRAY_FLOAT .)
    BEGIN           reduce using rule 17 (TIPO -> ARRAY_FLOAT .)
    PROCEDURE       reduce using rule 17 (TIPO -> ARRAY_FLOAT .)


state 30

    (18) TIPO -> MATRIX_INT .

    VAR             reduce using rule 18 (TIPO -> MATRIX_INT .)
    BEGIN           reduce using rule 18 (TIPO -> MATRIX_INT .)
    PROCEDURE       reduce using rule 18 (TIPO -> MATRIX_INT .)


state 31

    (19) TIPO -> MATRIX_FLOAT .

    VAR             reduce using rule 19 (TIPO -> MATRIX_FLOAT .)
    BEGIN           reduce using rule 19 (TIPO -> MATRIX_FLOAT .)
    PROCEDURE       reduce using rule 19 (TIPO -> MATRIX_FLOAT .)


state 32

    (20) TIPO -> CUBE_INT .

    VAR             reduce using rule 20 (TIPO -> CUBE_INT .)
    BEGIN           reduce using rule 20 (TIPO -> CUBE_INT .)
    PROCEDURE       reduce using rule 20 (TIPO -> CUBE_INT .)


state 33

    (21) TIPO -> CUBE_FLOAT .

    VAR             reduce using rule 21 (TIPO -> CUBE_FLOAT .)
    BEGIN           reduce using rule 21 (TIPO -> CUBE_FLOAT .)
    PROCEDURE       reduce using rule 21 (TIPO -> CUBE_FLOAT .)


state 34

    (22) TIPO -> BOOL .

    VAR             reduce using rule 22 (TIPO -> BOOL .)
    BEGIN           reduce using rule 22 (TIPO -> BOOL .)
    PROCEDURE       reduce using rule 22 (TIPO -> BOOL .)


state 35

    (6) VM -> ID SQBL NUMBER . SQBR VM2
    (7) VM -> ID SQBL NUMBER . COMMA NUMBER SQBR VM2
    (8) VM -> ID SQBL NUMBER . COMMA NUMBER COMMA NUMBER SQBR VM2

    SQBR            shift and go to state 50
    COMMA           shift and go to state 51


state 36

    (9) VM2 -> COMMA ID . VM2
    (10) VM2 -> COMMA ID . SQBL NUMBER SQBR VM2
    (11) VM2 -> COMMA ID . SQBL NUMBER COMMA NUMBER SQBR VM2
    (12) VM2 -> COMMA ID . SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2
    (9) VM2 -> . COMMA ID VM2
    (10) VM2 -> . COMMA ID SQBL NUMBER SQBR VM2
    (11) VM2 -> . COMMA ID SQBL NUMBER COMMA NUMBER SQBR VM2
    (12) VM2 -> . COMMA ID SQBL NUMBER COMMA NUMBER COMMA NUMBER SQBR VM2
    (13) VM2 -> . empty
    (76) empty -> .

    SQBL            shift and go to state 53
    COMMA           shift and go to state 20
    COLON           reduce using rule 76 (empty -> .)

    VM2                            shift and go to state 52
    empty                          shift and go to state 21

state 37

    (23) P -> P AUXPOSP PROCEDURE ID . COLON B ENDP

    COLON           shift and go to state 54


state 38

    (26) B -> BEGIN COLON ST .

    END             reduce using rule 26 (B -> BEGIN COLON ST .)
    ENDP            reduce using rule 26 (B -> BEGIN COLON ST .)


state 39
